# py-payments-ledger

./: .env.example  .gitignore  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
docker/: api.Dockerfile  worker.Dockerfile
docs/: CHANGELOG_PRODUCTION.md  DEMO.md
docs/api/: auth.md  examples.md  insomnia_export.json  openapi.json  openapi.yaml  postman_collection.json
docs/architecture/: c4-container.mmd  decisions.md  erd.mmd  sequence-main-flow.mmd
docs/contracts/: events.md
docs/plans/: 2026-02-23-full-improvements-design.md
docs/runbooks/: local-dev.md  operations.md  troubleshooting.md
migrations/: env.py  script.py.mako
migrations/versions/: 0001_init.py  0002_improvements.py
observability/grafana/dashboards/: breakers.json  outbox.json  overview.json  rate-limit.json
observability/prometheus/: prometheus.yml
scripts/: api-export.sh  format.sh  generate-screenshots.sh  lint.sh  logs.sh  migrate.sh  publish_charge_request.py  run-tests.sh  seed.sh  smoke.sh  up.sh
src/api/: main.py  middlewares.py
src/api/routers/: accounts.py  admin.py  auth.py  health.py  ledger.py  metrics.py  payments.py  reconciliation.py  refunds.py  reports.py  webhooks.py
src/application/: accounts.py  ledger.py  outbox.py  payments.py  reconciliation.py  refunds.py  security.py  webhooks.py
src/application/ports/: payment_gateway.py
src/infrastructure/db/: models.py  seed.py  session.py
src/infrastructure/gateway/: factory.py  fake.py  stripe_adapter.py
src/infrastructure/mq/: rabbit.py
src/infrastructure/redis/: client.py  idempotency.py  rate_limit.py
src/shared/: config.py  correlation.py  logging.py  metrics.py  problem.py
src/worker/: main.py
src/worker/handlers/: charge_request.py  (+2 more)
tests/: conftest.py
tests/contract/: test_provider_api.py
tests/unit/: test_accounts.py  test_charge_request.py  test_gateway.py  test_jwt.py  test_outbox.py  test_payments.py  test_reconciliation.py  test_refunds.py  test_tenant_sync.py  test_webhooks.py
