[project]
name = "py-payments-ledger"
version = "0.1.0"
description = "Payments engine with double-entry ledger, outbox pattern, idempotency, RBAC/ABAC and observability."
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "Felipe Ricarte", email = "felipericartem@gmail.com"},
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "pydantic>=2.6",
  "PyJWT>=2.8",
  "passlib[bcrypt]>=1.7",
  "redis>=5.0",
  "pika>=1.3",
  "prometheus-client>=0.20",
  "PyYAML>=6.0",
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.3",
  "black>=24.0",
  "mypy>=1.8",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".idea", ".git", "__pycache__", ".venv"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict = true
